# DevBox

./: LICENSE  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  appstate.ts  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/editors/: editor.rs  icon.rs  mod.rs
src/Project/CurrentTabContent/: index.tsx
src/Project/CurrentTabContent/Editors/: index.tsx
src/Project/CurrentTabContent/Home/: index.tsx
src/Project/CurrentTabContent/Projects/: index.tsx
src/Project/CurrentTabContent/Settings/: index.tsx
src/Project/Header/: index.tsx
src/Project/Navigation/: NavigationPageButton.tsx  NavigationPageDropdown.tsx  index.tsx
src/app/CurrentTabContent/: Tab.tsx  index.tsx
src/app/Header/: Actions.tsx  ProfileDropdown.tsx  index.tsx
src/app/Navigation/: NavigationPageButton.tsx  NavigationPageDropdown.tsx  index.tsx
src/assets/themes/: dark-default.css
src/components/Breadcrumb/: index.tsx
src/components/Button/: index.tsx
src/components/CommandPalette/: index.tsx
src/components/Context/: index.tsx
src/components/Dropdown/: index.tsx
src/components/NavigationBar/: index.tsx
src/components/Pages/: Page.tsx
src/components/ProfilePicture/: index.tsx
src/components/TitleBar/: index.tsx
src/store/: index.ts
src/store/slices/: editorsSlice.ts  snippetsSlice.ts  tabSlice.ts  themeSlice.ts
src/themes/: dark-default.css  dark-smooth.css  light.css
src/types/: editor.tsx  general.tsx  snippet.ts  tab.ts
src/utils/: browser.ts
(+11 files in other folders)
